# openai-sdk_projects

./: README.md
pr1/: pyproject.toml
pr1/src/pr1/: __init__.py  main.py
pr2/: pyproject.toml
pr2/src/pr2/: __init__.py  main.py
pr3/: pyproject.toml
pr3/src/pr3/: __init__.py  main.py
pr4/: .gitignore  pyproject.toml
pr4/src/pr4/: __init__.py  main.py
