[project]
name = "pr1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulbaseer102", email = "147842675+abdulbaseer102@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pr1 = "pr1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
